@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add extra debugging for "Not all files from hub '...' have been collected!"
+
 1.302172  2020-03-08 15:21:25-07:00 America/Los_Angeles
 
     - Fix transition doc
